Traducir contenido de español a inglés en archivos HTML, CSS y JavaScript

--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sergio Pérez - Portfolio de Proyectos</title>
+    <title>Sergio Pérez - Project Portfolio</title>
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
@@ -14,13 +14,13 @@
             <input type="checkbox" id="checkbox" />
             <div class="slider round"></div>
         </label>
-        <em>Modo Oscuro</em>
+        <em>Dark Mode</em>
     </div>
 
     <header>
         <div class="container">
             <h1>Sergio Pérez</h1>
-            <p class="subtitle">Desarrollador & Creador</p>
+            <p class="subtitle">Developer & Creator</p>
             <div class="social-links">
                 <a href="https://github.com/serper" target="_blank"><i class="fab fa-github"></i></a>
                 <a href="https://linkedin.com/in/tulinkedin" target="_blank"><i class="fab fa-linkedin"></i></a>
@@ -30,30 +30,30 @@
     </header>
 
     <section id="about" class="container">
-        <h2>Sobre mí</h2>
-        <p>¡Hola! Soy desarrollador de software apasionado por la tecnología y la innovación. Aquí podrás encontrar algunos de los proyectos en los que he trabajado.</p>
+        <h2>About me</h2>
+        <p>Hello! I'm a software developer passionate about technology and innovation. Here you can find some of the projects I've worked on.</p>
     </section>
 
     <section id="projects" class="container">
-        <h2>Mis Proyectos</h2>
+        <h2>My Projects</h2>
         <div class="filter-container">
-            <button class="filter-btn active" data-filter="all">Todos</button>
+            <button class="filter-btn active" data-filter="all">All</button>
             <div id="tech-filters" class="tech-filters">
-                <!-- Se llenará dinámicamente con JavaScript -->
+                <!-- Will be dynamically filled with JavaScript -->
             </div>
         </div>
         <div class="loading" id="loading">
             <div class="spinner"></div>
-            <p>Cargando proyectos...</p>
+            <p>Loading projects...</p>
         </div>
         <div id="projects-container" class="projects-grid">
-            <!-- Proyectos se cargarán aquí dinámicamente -->
+            <!-- Projects will be loaded here dynamically -->
         </div>
     </section>
 
     <footer>
         <div class="container">
-            <p>&copy; <span id="year"></span> Sergio Pérez. Creado con <i class="fas fa-heart"></i></p>
+            <p>&copy; <span id="year"></span> Sergio Pérez. Created with <i class="fas fa-heart"></i></p>
         </div>
     </footer>
 
